--- a/Ejercicios-CSS/catalogo.css
+++ b/Ejercicios-CSS/catalogo.css
@@ -1,3 +1,9 @@
+:root{
+    --color-primario: rgb(120, 11, 11);
+    --color-secundario: rgb(35, 11, 120);
+    --color-texto:white;
+}
+
 main{
     display: grid;
     grid-template-columns: auto auto auto;
@@ -14,4 +20,43 @@ main div{
 
 img{
     width: 100%;
+}
+
+.item1{
+    grid-area: header;
+}
+.item2{
+    grid-area: nav;
+}
+.item3{
+    grid-area: aside;
+}
+.item4{
+    grid-area: main;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-areas: 
+    "header header header header"
+    "nav nav nav nav"
+    "aside main main main"
+    "footer footer footer footer";
+    gap: 10px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+a{
+    text-decoration: none;
+    background-color: var(--color-primario);
+    color: white;
+    font-weight: 500;
+    padding: 5px;
+    transition: background-color 0.8s linear 0,2s padding 0.3 ease;
+}
+
+a:hover{
+    background-color: var(--color-secundario);
+    padding: 7px
+
 }
